--- a/Dockerfile.admin
+++ b/Dockerfile.admin
@@ -4,7 +4,6 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Sistemi güncelle & bağımlılıkları yükle
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpq-dev \
@@ -16,10 +15,8 @@ RUN pip install --upgrade pip && pip install -r requirements.txt
 
 COPY ./admin /app
 
-ENV DJANGO_SETTINGS_MODULE=admin.settings
+ENV DJANGO_SETTINGS_MODULE=admin.blog.settings
 
-# Statik dosya dizinini oluştur
 RUN mkdir -p /app/static
 
-# Varsayılan olarak migrate ve runserver başlat
-CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
+CMD ["gunicorn", "admin.blog.wsgi:application", "--bind", "0.0.0.0:8000"]
