--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ POSTGRES_HOST=db
 POSTGRES_PORT=5432
 
 # AI
-OPENAI_API_KEY=your_openai_api_key
-SERP_API_KEY=your_serp_api_key
+OPENAI_API_KEY=
+SERP_API_KEY=
 
 # BLOG
 
