--- a/nginx.conf
+++ b/nginx.conf
@@ -3,17 +3,29 @@ worker_processes 1;
 events { worker_connections 1024; }
 
 http {
-    server {
+    server 
         listen 80;
-        server_name _;
+        server_name localhost;
 
         root /usr/share/nginx/html;
+
         index index.html;
 
         location / {
-            try_files $uri $uri/ =404;
+            try_files $uri $uri/ /index.html;
         }
 
-        error_page 404 /404.html;
-    }
+        location /blog {
+            try_files $uri $uri/ /blog/index.html;
+        }
+
+        location /projects {
+            try_files $uri $uri/ /projects/index.html;
+        }
+
+        location /static/ {
+            alias /usr/share/nginx/static/;
+        }
+
+
 }
