nginx config fix

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,15 @@
 worker_processes 1;
 
-events { worker_connections 1024; }
+events {
+    worker_connections 1024;
+}
 
 http {
-    server 
+    server {
         listen 80;
         server_name localhost;
 
         root /usr/share/nginx/html;
-
         index index.html;
 
         location / {
@@ -26,6 +27,5 @@ http {
         location /static/ {
             alias /usr/share/nginx/static/;
         }
-
-
+    }
 }
