--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,5 +39,5 @@ jobs:
         key: ${{ secrets.SERVER_SSH_KEY }}
         script: |
           cd /var/www/blog
-          docker compose down
-          docker compose up -d --build
+          docker-compose down
+          docker-compose up -d --build
