--- a/Dockerfile.ai
+++ b/Dockerfile.ai
@@ -2,24 +2,19 @@
 
 FROM python:3.11-slim
 
-# Set work directory
 WORKDIR /app
 
-# Install system dependencies if needed
 RUN apt-get update && apt-get install -y \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements and install
 COPY ./ai/requirements.txt /app/requirements.txt
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy all project files
 COPY ai/. .
+COPY ai/entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
 
-# Optional: Make .env available (or mount as volume)
-# COPY .env .env
-
-# Entrypoint (update if your main file is different)
-CMD ["python", "src/app.py", "titles.txt"]
+# Hem API hem arka plan daily job çalışır!
+CMD ["./entrypoint.sh"]
