--- a/Dockerfile.ai
+++ b/Dockerfile.ai
@@ -17,4 +17,4 @@ COPY ai/entrypoint.sh /app/entrypoint.sh
 RUN chmod +x /app/entrypoint.sh
 
 # Hem API hem arka plan daily job çalışır!
-CMD ["./entrypoint.sh"]
+CMD /bin/sh -c "uvicorn src.ai_api:app --host 0.0.0.0 --port 5000 & while true; do sleep 86400; echo \"[CRON] \$(date): processing blog title\"; python ai/scripts/dispatch_one_job.py; done"
