super user, migration

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 DJANGO_STATIC_ROOT=/usr/share/nginx/static
 DJANGO_DEV_MODE=True
 
+DJANGO_SUPERUSER_USERNAME=
+DJANGO_SUPERUSER_EMAIL=
+DJANGO_SUPERUSER_PASSWORD=
+
 # Database
 POSTGRES_DB=blogdb
 POSTGRES_USER=bloguser
