--- a/Dockerfile.admin
+++ b/Dockerfile.admin
@@ -19,4 +19,8 @@ ENV DJANGO_SETTINGS_MODULE=blog.settings
 
 RUN mkdir -p /app/static
 
+RUN python manage.py migrate && \
+    python manage.py collectstatic --noinput && \
+    python create_superuser.py
+
 CMD ["gunicorn", "blog.wsgi:application", "--bind", "0.0.0.0:8000"]
