--- a/Dockerfile.ai
+++ b/Dockerfile.ai
@@ -13,6 +13,9 @@ COPY ./ai/requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY ai/. .
+
+ENV PYTHONPATH=/app/src
+
 COPY ai/entrypoint.sh /app/entrypoint.sh
 RUN chmod +x /app/entrypoint.sh
 
