--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ DJANGO_SUPERUSER_USERNAME=
 DJANGO_SUPERUSER_EMAIL=
 DJANGO_SUPERUSER_PASSWORD=
 
-DJANGO_BOT_USERNAME=
+DJANGO_AI_BOT_USERNAME=
 DJANGO_AI_BOT_EMAIL=
-DJANGO_BOT_PASSWORD=
+DJANGO_AI_BOT_PASSWORD=
 
 # Database
 POSTGRES_DB=blogdb
