--- a/Dockerfile.admin
+++ b/Dockerfile.admin
@@ -21,5 +21,5 @@ RUN mkdir -p /app/static
 
 CMD python manage.py migrate && \
     python manage.py collectstatic --noinput && \
-    python create_superuser.py && \
+    python create_seed_users.py && \
     gunicorn blog.wsgi:application --bind 0.0.0.0:8000
