--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,8 @@ services:
       - ./ai:/app
       - ./frontend/content/blog:/app/blog_content 
       - ./bin/ursus:/app/bin/ursus:ro
+    environment:
+      - PYTHONPATH=/app
     env_file:
       - .env
 
