--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,8 +59,15 @@ services:
       - "5000:5000"
     volumes:
       - ./ai:/app
-      - ./frontend/content/blog:/app/blog_content 
+      - ./ursus:/app/ursus
       - ./bin/ursus:/app/bin/ursus:ro
+      - ./frontend/content/blog:/app/blog_content 
+      - ./frontend/content:/app/frontend/content:ro
+      - ./frontend/templates:/app/frontend/templates:ro
+      - ./bin/ursus:/app/bin/ursus:ro
+      - ./output:/app/output
+      - ./ursus_config.py:/app/ursus_config.py:ro   
+      - ./.git:/app/.git:ro
     environment:
       - PYTHONPATH=/app
     env_file:
