--- a/Dockerfile.ai
+++ b/Dockerfile.ai
@@ -12,17 +12,21 @@ COPY ./ai/requirements.txt /app/requirements.txt
 
 RUN pip install --no-cache-dir -r requirements.txt
 
+COPY ai/. .
 COPY ./ursus /app/ursus
 COPY ./setup.py /app/setup.py
-COPY ./SITE_README.md /app/README.md
 
 RUN pip install .
+
+COPY ./SITE_README.md /app/README.md
+COPY ./bin/ursus /app/bin/ursus
+COPY ./ursus_config.py /app/ursus_config.py
+
+ENV PYTHONPATH=/app:/app/src
 
 RUN git init
 
 RUN git config --global --add safe.directory /app
-
-COPY ai/. .
 
 # Hem API hem arka plan daily job çalışır!
 CMD /bin/sh -c "uvicorn src.ai_api:app --host 0.0.0.0 --port 5000 & while true; do sleep 86400; echo \"[CRON] \$(date): processing blog title\"; python ai/scripts/dispatch_one_job.py; done"
