--- a/Dockerfile.ai
+++ b/Dockerfile.ai
@@ -5,10 +5,15 @@ FROM python:3.11-slim
 WORKDIR /app
 
 RUN apt-get update && apt-get install -y \
+    git \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
 COPY ./ai/requirements.txt /app/requirements.txt
+
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY ./ursus/requirements.txt /app/requirements.txt
 
 RUN pip install --no-cache-dir -r requirements.txt
 
