--- a/Dockerfile.ai
+++ b/Dockerfile.ai
@@ -9,13 +9,11 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-COPY ./ai/requirements.txt /app/requirements.txt
+COPY ./ai/requirements.txt /app/requirements-ai.txt
+COPY ./ursus/requirements.txt /app/requirements-ursus.txt
 
-RUN pip install --no-cache-dir -r requirements.txt
-
-COPY ./ursus/requirements.txt /app/requirements.txt
-
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements-ai.txt
+RUN pip install --no-cache-dir -r requirements-ursus.txt
 
 COPY ai/. .
 COPY ./ursus /app/ursus
