--- a/Dockerfile.ai
+++ b/Dockerfile.ai
@@ -19,19 +19,16 @@ COPY ai/. .
 COPY ./ursus /app/ursus
 COPY ./setup.py /app/setup.py
 
-RUN pip install .
-
 COPY ./SITE_README.md /app/README.md
-COPY ./bin/ursus /app/bin/ursus
-
-RUN chmod +x /app/bin/ursus
-
+COPY ./bin /app/bin 
+RUN chmod +x /app/bin/ursus 
 COPY ./ursus_config.py /app/ursus_config.py
 
 ENV PYTHONPATH=/app:/app/src
 
-RUN git init
+RUN pip install .
 
+RUN git init 
 RUN git config --global --add safe.directory /app
 
 # Hem API hem arka plan daily job çalışır!
