--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,9 +51,12 @@ jobs:
           docker-compose down
           docker-compose up -d --build
       timeout-minutes: 30 
-      - name: Deploy to Server
-        run: |
-          # your deploy script or docker compose up -d --build
+
+    - name: Wait until sitemap.xml is accessible
+      run: |
+        for i in {1..30}; do
+          curl --fail --silent https://blog.emirbaycan.com.tr/sitemap.xml && break || sleep 3
+        done
 
     - name: Ping Google with new sitemap
       run: |
