--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Django
 SECRET_KEY=your_secret_key
 DEBUG=True
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,https://blog.emirbaycan.com.tr
 DJANGO_STATIC_ROOT=/usr/share/nginx/static
 DJANGO_DEV_MODE=True
 
